2010-01-09  Jeremy Whiting (jpwhiting)
        * Moved kttsjobmgr into the kcm itself, no more plugin/kpart for it.  Finished making the
          controls on the Jobs tab apply on apply or ok click.
        * Using speech-dispatcher for a while now - no more jobs in kttsd, no more sbd filter (also
          no more sentence or job control from within kttsmgr).

2005-07-19  Gary Cramblitt (PhantomsDad)
        * Name kept .wav files in format kttsd-jjjjjjjj-ssssssss.wav where jjjjjjjj is the job 
          number zero-filled to the left and ssssssss is the sentence sequence number zero-filled
          to the left.

2005-07-01  Gary Cramblitt (PhantomsDad)
        * Since ALSA plugin seems to work pretty well, enable building --without-arts and build
          ALSA plugin by default (if headers found).

2005-06-25  Gary Cramblitt (PhantomsDad)
        * The XML Transformer filter now applies itself when the root element OR doctype and appId match.

2005-06-12  Gary Cramblitt (PhantomsDad)
        * New aKode audio plugin.  Build it with ./configure --enable-kttsd-akode.
          There are a couple of problems.  See README players/akodeplayer/README.
        * Activate rich speak (XHTML to SSML) in Konqueror plugin.  To speak richly,
          you must configure the xhtml2ssml_simple XML Transformer plugin.

2005-06-03  Gary Cramblitt (PhantomsDad)
        * New ALSA audio plugin.  Build it with ./configure --enable-kttsd-alsa for now.
        * New Qt Rich Text to Plain Text filter by David Powell.

2005-04-30  Gary Cramblitt (PhantomsDad)
        * Change Current Sentence widget in Jobs tab to KTextEdit to avoid resizing when text does
          not fit in box.
        * HTML to SSML now working pretty well.  Note that you must
            1.  Have Festival 1.95 installed.
            2.  Have rab_diphone voice installed.
            3.  Have xsltproc installed.
            4.  If you have Festival Talker configured, reconfigure it (Edit) so that it will detect