@@ -25,14 +25,11 @@
 #include <KPluginFactory>
 #include <KPluginLoader>
 
-// KTTS includes.
+// Jovie includes.
 #include "filterproc.h"
 
 #include "xmltransformerconf.h"
 #include "xmltransformerproc.h"
 
 K_PLUGIN_FACTORY(XmlTransformerPluginFactory, registerPlugin<XmlTransformerProc>(); registerPlugin<XmlTransformerConf>();)
-K_EXPORT_PLUGIN(XmlTransformerPluginFactory("kttsd"))
-//typedef K_TYPELIST_2( XmlTransformerProc, XmlTransformerConf ) XmlTransformerPlugin;
-//K_EXPORT_COMPONENT_FACTORY( libkttsd_xmltransformerplugin,
-//    KGenericFactory<XmlTransformerPlugin>("kttsd") )
+K_EXPORT_PLUGIN(XmlTransformerPluginFactory("jovie"))
